# rust-sample-project

./: Cargo.toml  README.md  trigger.txt
