[package]
name = "sample"
version = "0.1.0"
authors = ["Bruno Bossola <bruno@meterian.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sample"
path = "src/main.rs"

[dependencies]
time = "0.2.9"
#rand = "0.8.3"
